# ckanapi_harvesters

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: deploy-pages.yml  pytest.yml  upload-to-pipy.yml
sphinx/: conf.py  index.rst
sphinx/notebooks/: builder_api_sample_notebook.ipynb  builder_example_notebook.ipynb  builder_excel_notebook.ipynb
sphinx/pages/: ckan_field_naming_recommendations.md  ckan_recommendations_field_naming.md  ckan_recommendations_metadata.md  data_format_policy_recommendations.md  package_builder_cli_ckan.md  package_builder_cli_resource_options.md  package_builder_excel_workbook.md  package_builder_harvesters.md  package_overview.md
src/: .gitignore
src/ckanapi_harvesters/: __init__.py
src/ckanapi_harvesters/auxiliary/: __init__.py  ckan_action.py  ckan_api_key.py  ckan_auxiliary.py  ckan_configuration.py  ckan_errors.py  ckan_field_types.py  ckan_map.py  ckan_model.py  ckan_progress_callbacks.py  ckan_progress_callbacks_abc.py  ckan_progress_callbacks_prototypes.py  ckan_progress_callbacks_simple.py  ckan_progress_callbacks_tqdm.py  error_level_message.py  external_code_import.py  lazy_imports.py  list_records.py  login.py  path.py  proxy_config.py  ssh_tunnel.py  urls.py  virtual_df_chunks.py
src/ckanapi_harvesters/builder/: __init__.py  builder_aux.py  builder_ckan.py  builder_errors.py  builder_field.py  builder_package.py  builder_package_1_basic.py  builder_package_2_harvesters.py  builder_package_3_multi_threaded.py  builder_package_example.xlsx  builder_resource.py  builder_resource_datastore.py  builder_resource_datastore_ckan.py  builder_resource_datastore_file.py  builder_resource_datastore_file_wip.py  builder_resource_datastore_multi_abc.py  builder_resource_datastore_multi_ckan.py  builder_resource_datastore_multi_folder.py  builder_resource_datastore_multi_harvester.py  builder_resource_datastore_unmanaged.py  builder_resource_datastore_url.py  builder_resource_init.py  builder_resource_multi_abc.py  builder_resource_multi_datastore.py  builder_resource_multi_file.py  mapper_datastore.py  mapper_datastore_multi.py  mapper_datastore_prototypes.py
src/ckanapi_harvesters/builder/deprecated/: __init__.py
src/ckanapi_harvesters/builder/example/: .gitignore  README.md  __init__.py  builder_example.py  builder_example_aux_fun.py  builder_example_download.py  builder_example_generate_data.py  builder_example_patch_upload.py  builder_example_policy.py  builder_example_sample_dataset.py  builder_example_test_sql.py  builder_example_tests.py  builder_example_tests_dev.py  builder_example_tests_offline.py
src/ckanapi_harvesters/builder/example/package/traces_multi/: trace_000.csv  trace_001.csv  trace_002.csv
src/ckanapi_harvesters/builder/specific/: configuration_builder.py
src/ckanapi_harvesters/ckan_api/: __init__.py  ckan_api.py  ckan_api_0_base.py  ckan_api_1_map.py  ckan_api_2_readonly.py  ckan_api_3_policy.py  ckan_api_4_readwrite.py  ckan_api_5_manage.py  ckan_api_6_user_access.py  ckan_api_local.py  ckan_api_params.py
src/ckanapi_harvesters/ckan_api/deprecated/: ckan_api_deprecated.py  ckan_api_deprecated_vocabularies.py
src/ckanapi_harvesters/ckan_api/dev/: __init__.py  ckan_api_local.py
src/ckanapi_harvesters/harvesters/: __init__.py  harvester_abc.py  harvester_errors.py  harvester_init.py  harvester_params.py  mongodb_data_cleaner.py  mongodb_harvester.py  mongodb_params.py  postgre_harvester.py  postgre_params.py  pymongo_data_cleaner.py  pymongo_harvester.py  pymongo_params.py
src/ckanapi_harvesters/harvesters/data_cleaner/: __init__.py  data_cleaner_abc.py  data_cleaner_errors.py  data_cleaner_init.py  data_cleaner_upload.py  data_cleaner_upload_1_basic.py  data_cleaner_upload_2_geom.py  data_cleaner_upload_3_assist.py  data_cleaner_upload_3_check.py
src/ckanapi_harvesters/harvesters/file_formats/: __init__.py  auxiliary_defs.py  csv_format.py  file_format_abc.py  file_format_init.py  geoparquet_format.py  json_format.py  mat_format.py  parquet_format.py  shp_format.py  user_format.py  user_format_prototypes.py  xls_format.py
src/ckanapi_harvesters/policies/: __init__.py  data_format_policy.py  data_format_policy_abc.py  data_format_policy_custom_fields.py  data_format_policy_defs.py  data_format_policy_errors.py  data_format_policy_lists.py  data_format_policy_output_config.py  data_format_policy_tag_groups.py  policy_report.py
src/ckanapi_harvesters/reports/: __init__.py  admin_report.py
tests/: test_ckan_demo.py  test_divider.py  test_helloworld.py
tests/ci/: test_builder_example_offline.py
tests/integration/: test_integration.py
tests/local/: test_local.py
tests/unit/: test_url_matches_host.py
