[project]
name = "ckanapi_harvesters"
version = '0.0.0'
authors = [
	{ name = "ifpen-gp", email = "63413841+ifpen-gp@users.noreply.github.com" },
]
maintainers = [
	{ name = "ifpen-gp", email = "63413841+ifpen-gp@users.noreply.github.com" },
]
description = "Package helping to upload local resources to a CKAN server using the CKAN API. Metadata and the list of resources can be defined in an Excel spreadsheet. The package includes requests to download resources and checks metadata against formatting rules."
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # ajouter les dépendances necessaires
	"requests == 2.32.5",
	"pandas == 2.3.3",
	"numpy >= 2.4.3",
	"openpyxl == 3.1.5",  # necessary to read Excel files
]

license = { file = "LICENSE" }

[project.urls]
Documentation = "https://mobidec.github.io/ckanapi_harvesters/index.html"
Repository = "https://github.com/Mobidec/ckanapi_harvesters.git"
Issues = "https://github.com/Mobidec/ckanapi_harvesters/issues"
Changelog = "https://github.com/Mobidec/ckanapi_harvesters/blob/main/CHANGELOG.md"

[project.optional-dependencies]
extras = [  # default extras
    "pymongo == 4.16.0",    # MongoDB harvester
    "psycopg2 == 2.9.11",  # Postgre harvester
    "shapely == 2.1.2",    # GeoJSON support
    "pyproj >= 3.7.2",     # GeoJSON transformations
    "geopandas == 1.1.2",  # Shapefile reading functions
]
harvesters = [  # dependencies for database harvesters
    "pymongo == 4.16.0",    # MongoDB harvester
    "psycopg2 == 2.9.11",  # Postgre harvester
    "shapely == 2.1.2",    # GeoJSON support
    "pyproj >= 3.7.2",     # GeoJSON transformations
]
alt = [  # optional packages alternative
    "bson",  # bson implementation, independent of pymongo
    "shapely == 2.1.2",    # GeoJSON support
    "pyproj == 3.6.1",     # GeoJSON transformations (v3.6.1 is compatible with Python 3.10)
    "geopandas == 1.1.2",  # Shapefile reading functions
]
mat = [  # optional packages to read MAT files (not used by the package directly, only by examples)
    "scipy == 1.15.3",
    "h5py == 3.16.0",
]
sshtunnel = [  # optional packages to create ssh tunnels (not fully tested)
    "sshtunnel == 0.4.0",
    "paramiko == 3.5.1",   # compatibility with sshtunnel (strict version)
]
dev = [
    "pytest == 8.0.1",  # strict version (from package template)
    "build",
    "twine",
    "ruff",
    "sphinx",
    "sphinx_design",
    # "myst_parser",  # included with myst_nb
    "furo",
    "sphinx_autopackagesummary",
    "sphinxcontrib-napoleon",
    "sphinx-rtd-theme",
    "numpydoc",
    'myst_nb',  # Jupyter Notebook inclusion in sphinx
]

[tool.setuptools.package-data]
# non-source files to include in the package
"ckanapi_harvesters" = [
    "builder/builder_package_example.xlsx",
    "builder/example/package/**/*.*",
    "builder/example/*.ipynb",
]

[tool.ckanapi_harvesters]
version = "1.0.2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.setuptools]
py-modules = []
license-files = []

[tool.ruff]
# Set the maximum line length to 140.
line-length = 140
exclude = [
    "tests",
    "tests_disabled",
    "sphinx",
    "src",
]

[tool.ruff.lint]
# See documentation: https://docs.astral.sh/ruff/rules/
extend-select = [
  "UP",
  "E501",
  "I",
  "B",
  "F",
  "E",
  "N",
  "A",
  "PL",
  "D"
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"  # needs to be changed (rst docstrings)

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
